bin_PROGRAMS = CryptoLocator CryptoCodeDetector CryptoVisualizer CryptoID
CryptoLocator_SOURCES = CL_Includes.h CL_main.c CL_Tests.c cephes/double/const.c cephes/double/gamma.c cephes/double/igam.c cephes/double/mtherr.c cephes/double/isnan.c cephes/double/polevl.c cephes/double/mconf.h 
CryptoCodeDetector_SOURCES = CCD.c
CryptoVisualizer_SOURCES = CV_main.c
CryptoID_SOURCES = CID.cc

